# django-starter-project

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Dockerfile-webpack  LICENSE.txt  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/: dependabot.yml
.zed/: settings.json
apps/common/: mixin.py  pagination.py  responses.py
apps/common/validation/: __init__.py  users_validators.py
apps/misc/: context_processors.py  models.py  tasks.py
apps/misc/management/commands/: celery_autoreload.py
apps/users/: admin.py  managers.py  models.py
apps/users/migrations/: 0001_initial.py
assets/: package-lock.json  package.json  webpack.config.js
assets/scss/: main.scss
conf/: settings.py  urls.py
scripts/: entrypoint-celery.sh  entrypoint-django.sh  project_commands.py  setup_db.sh  setup_project.py
tests/: conftest.py  test_responses.py
tests/misc/: test_choices.py
